<resources>
    <string name="app_name">Clinic info branch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="yes">Այո</string>
    <string name="no">Ոչ</string>

    <string name="healthQuestion1">1. Ունեցե՞լ եք արդյոք ալերգիկ դրսևորումներ (եթե այո, նշել ինչից):</string>

    <string name="healthQuestion2">2. Հաճախակի՞ եք ունենում արնահոսություն քթից, հեշտությա՞մբ են

առաջանում կապտուկներ, երկարատև՞ է արնահոսությունը վերքերից

կամ հեռացված ատամի ատամնաբնից (ցանկացածի առկայության

դեպքում նշել «այո» և ընդգծել):</string>

    <string name="healthQuestion3">3. Ունե՞ք կամ երբևիցե ունեցե՞լ եք ստորև նշված հիվանդություններից որևէ մեկը.</string>

    <string name="healthQuestion4">4. Ունե՞ք կամ երբևիցե ունեցե՞լ եք հիվանդություն, որը նշված չէ,

 եթե այո, նշեք այն.</string>
    <string name="healthQuestion5">5. Կրծքով կերակրու՞մ եք կամ ունե՞ք հղիություն.</string>

    <string name="healthInfo">ՏԵՂԵԿՈՒԹՅՈՒՆՆԵՐ ԱՌՈՂՋՈՒԹՅԱՆ ՎԵՐԱԲԵՐՅԱԼ</string>
    <string name="oralHealthInfo">ԲԵՐԱՆԻ ԽՈՌՈՉԻ ՎԻՃԱԿԸ </string>

    <string name="allergyTrue">Հիվանդի անամնեզում նշվում է ալերգիկ դրսևորւմներ մասնաորապես ՝</string>
    <string name="allergyFalse">Հիվանդի անամնեզում չի նշվում ալերգիկ դրսևորւմներ</string>
    <string name="anemiaTrue">, նշվում է արյունահոսության դեպքեր:</string>
    <string name="anemiaFalse">, չի նշվում արյունահոսության դեպքեր:</string>

    <string name="healthInfoTxtInitial"> Առկա են հետևյալ հիվանդությունները `</string>
    <string name="rheumatism">ռևմատիզմ</string>
    <string name="arthritis">բորբոքային հոդաբորբ (արթրիտ)</string>
    <string name="heartDefect">սրտի արատ</string>
    <string name="heartAttack">սրտամկանի ինֆարկտ</string>
    <string name="heartSurgery">սրտի վիրահատություն</string>
    <string name="stenocardia">ցավ կրծքավանդակի շրջանում(ստենոկարդիա)</string>
    <string name="kidneyDisease">երիկամների հիվանդություններ</string>
    <string name="bloodDisease">սակավարյունություն կամ արյան այլ հիվ-ներ</string>
    <string name="gastrointestinalTractDisease">ստամոքս-աղիքային համակարգի հիվ-ներ</string>
    <string name="respiratoryTractDisease">շնչառական համակարգի հիվանդություններ</string>
    <string name="hypertension">արյան գերճնշում (հիպերտենզիա)</string>
    <string name="hypotension">արյան թերճնշում (հիպոտոնիա)</string>
    <string name="thyroidGladDisease">վահանաձև գեղձի հիվանդություններ</string>
    <string name="nervousMentalDisorders">նյարդային և հոգեկան խանգարումներ</string>
    <string name="epilepsy">ընկնավորություն (էպիլեպսիա)</string>
    <string name="diabetes">շաքարային դիաբետ</string>
    <string name="infectionsDiseases">վարակիչ հիվանդություններ</string>
    <string name="neoplasm">նորագոյացություններ</string>
    <string name="hepatitis">լյարդաբորբ (հեպատիտ)</string>
    <string name="otherLiverDiseases">լյարդի այլ հիվանդություններ</string>
    <string name="sexuallyTransmittedDiseases">վեներական հիվանդություններ</string>
    <string name="skinDiseases">մաշկային հիվանդություններ</string>

    <string name="O">ատամը բացակայում է</string>
    <string name="C">ատամը ախտահարված է կարիեսով</string>
    <string name="P">ատամը ախտահարված է պուլպիտով</string>
    <string name="Pt">ատամը ախտահարված է պերիոդոնտիտով</string>
    <string name="R">ատամից պահպանվել է միայն արմատը</string>
    <string name="I">ատամի շրջանում տեղադռված է իմպլանտատ</string>
    <string name="F">ատամը ենթարկվել է էնդոդոնտիկ բուժման, առկա է ատամնալիցք</string>
    <string name="DP">ատամի վրա առկա է ատամնափառ</string>
    <string name="DC">ատամի վրա առկա է ատամնաքար</string>
    <string name="Cr">ատամը վերականգնվել է արեստական պսակի օգնությամբ</string>
    <string name="mob1">ատամի մոտ հայտնաբերվել է առաջին աստիճանի շարժունակություն</string>
    <string name="mob2">ատամի մոտ հայտնաբերվել է երկրորդ աստիճանի շարժունակություն</string>
    <string name="mob3">ատամի մոտ հայտնաբերվել է երրորդ աստիճանի շարժունակություն</string>

    <string name="hygieneGood">Բերանի խոռոչի հիգիենիկ վիճակը լավ է</string>
    <string name="hygieneEnough">Բերանի խոռոչի հիգիենիկ վիճակը բավարար է</string>
    <string name="hygieneBad">Բերանի խոռոչի հիգիենիկ վիճակը վատ է</string>

    <string name="biteNormally">, կծվածքի տեսակը ` բնականոն: </string>
    <string name="bitePathological">, կծվածքի տեսակը ` ախտաբանական: </string>

    <string name="stateOfTeethDefault">Բացակայող և ախտահարված ատամներ չի հայտնաբերվել</string>
    <string name="john_doe">John Doe</string>
    <string name="phone">Phone:</string>
    <string name="name">Ազգանունը, անունը</string>
    <string name="pick_date">pick date</string>
    <string name="pick_time">pick time</string>
    <string name="data">07/09/03</string>
    <string name="time">15:35</string>
    <string name="date">date:</string>
    <string name="timeText">Time:</string>
    <string name="phoneN">Հեռախոսահամար</string>
    <string name="health_info">HEALTH INFO</string>
    <string name="oral_health">ORAL HEALTH</string>
    <string name="treatment_process">TREATMENT PROCESS</string>
    <string name="register">Register</string>
    <string name="telephone_number">Հեռախոսի համարը</string>
    <string name="address">Բնակության վայրը</string>
    <string name="female">իգական</string>
    <string name="male">արական</string>
    <string name="gender">Սեռը`</string>
    <string name="birthday">Ծննդյան օրը, ամիսը, տարեթիվը</string>
    <string name="name_surname">Ազգանունը, անունը, հայրանունը</string>
    <string name="card">ՄԵԾԱՀԱՍԱԿԻ ՍՏՈՄԱՏՈԼՈԳԻԱԿԱՆ ՔԱՐՏ</string>
    <string name="allergic_anifestations">Ալերգիկ Դրսևորումներ</string>
    <string name="Rheumatism">Ռևմատիզմ</string>
    <string name="number">+37493093740</string>
    <string name="date_">Date:</string>
    <string name="_19_07_2020">19/07/2020</string>
    <string name="time_">Time:</string>
    <string name="_15_30_pm">15 : 30 pm</string>
    <string name="all_times">All Times</string>
    <string name="current_month">Current Month</string>
    <string name="current_week">Current Week</string>
    <string name="today">Today</string>
    <string name="custom">Custom</string>
    <string name="treatment_process_txt">Բուժման գործնթաց</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="about_toast">Ատամնաբուժարանի համար նախատեսված բջջային հավելված</string>
    <string name="settings">Settings</string>


    <string-array name="days">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>

    <string-array name="months">
        <item>հունվար</item>
        <item>փետրվար</item>
        <item>մարտ</item>
        <item>ապրիլ</item>
        <item>մայիս</item>
        <item>հունիս</item>
        <item>հուլիս</item>
        <item>օգոստոս</item>
        <item>սեպտեմբեր</item>
        <item>հոկտեմբեր</item>
        <item>նոյեմբեր</item>
        <item>դեկտեմբեր</item>
    </string-array>

    <string-array name="Years">
        <item>1970</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>

    </string-array>

    <string-array name="dentalDiagram">
        <item>Բացակայող ատամ – Օ</item>
        <item>Ատամնափուտ – C</item>
        <item>Կակղանաբորբ – P</item>
        <item>Շուրջատամնաբորբ – Pt</item>
        <item>Արմատ – R</item>
        <item>Իմպլանտ – I</item>
        <item>Ատամնալիցք – F</item>
        <item>Ատամնափառ – DP </item>
        <item>Ատամնաքար – DC </item>
        <item>Արհեստական պսակ – Cr </item>
        <item>Ատամների շարժունություն` I, II ,III
</item>
    </string-array>
</resources>