<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:title="settings"
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom|withText">

        <menu >

            <item
                android:title="Choose Working Times"
                android:id="@+id/workingTimes"/>

            <item
                android:title="Choose Count of Notes"
                android:id="@+id/notesCount"/>

        </menu>
    </item>



    <item
        android:id="@+id/reset"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="ifRoom|withText"
        android:title="@string/reset"/>
    <item
        android:id="@+id/about"
        android:icon="@drawable/ic_baseline_info_24"
        app:showAsAction="never"
        android:title="@string/about">
    </item>

    <item
        android:id="@+id/exit"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        app:showAsAction="never"
        android:title="@string/exit">
    </item>
</menu>