<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="7dp">

    <TextView
        android:id="@+id/txtHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/card"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fullNameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#FFF"
        app:boxStrokeColor="#FFF"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.461"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/name_surname"
            android:inputType="textPersonName"
            android:textColorHint="#E1DFDF"
            app:hintTextAppearance="@style/MyHintStyle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.461"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHeader" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/txtBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/birthday"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullNameLayout" />

    <Spinner
        android:id="@+id/spinnerDaysTreatment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:entries="@array/days"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBirthday" />

    <Spinner
        android:id="@+id/spinnerMonthsTreatment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:entries="@array/months"
        app:layout_constraintStart_toEndOf="@+id/spinnerDaysTreatment"
        app:layout_constraintTop_toBottomOf="@+id/txtBirthday" />

    <Spinner
        android:id="@+id/spinnerYearsTreatment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:entries="@array/Years"
        app:layout_constraintStart_toEndOf="@+id/spinnerMonthsTreatment"
        app:layout_constraintTop_toBottomOf="@+id/txtBirthday" />

    <TextView
        android:id="@+id/txtGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/gender"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMonthsTreatment" />

    <RadioGroup
        android:id="@+id/check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/txtGender"
        app:layout_constraintTop_toBottomOf="@+id/spinnerMonthsTreatment">

        <RadioButton
            android:id="@+id/checkMale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/checkFemale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/female" />
    </RadioGroup>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addressLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#FFF"
        app:boxStrokeColor="#FFF"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/check">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/address"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkMale" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="#FFF"
        app:boxStrokeColor="#FFF"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addressLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhoneValidation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/telephone_number"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address"
            tools:ignore="TextFields" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/healthInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/health_info"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/oralHealth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/oral_health"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/treatmentProcess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/treatment_process"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <ImageView
        android:id="@+id/btnHealthInfo"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:background="@drawable/add_button"
        app:layout_constraintStart_toEndOf="@+id/healthInfo"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageView
        android:id="@+id/btnOralHealth"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:background="@drawable/add_button"
        app:layout_constraintStart_toEndOf="@+id/oralHealth"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <ImageView
        android:id="@+id/btnTreatmentProcess"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:background="@drawable/add_button"
        app:layout_constraintStart_toEndOf="@+id/treatmentProcess"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="436dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="513dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="590dp" />

    <!--        <Button-->
    <!--            android:id="@+id/btnTeethDiagram"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="40dp"-->
    <!--            android:layout_marginTop="30dp"-->
    <!--            android:layout_marginEnd="40dp"-->
    <!--            android:background="@drawable/button_background"-->
    <!--            android:text="Oral Health"-->
    <!--            app:layout_constraintEnd_toEndOf="@+id/parent"-->
    <!--            app:layout_constraintStart_toStartOf="@+id/parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/etQuestion5Layout" />-->

    <!--        <Button-->
    <!--            android:id="@+id/btnTreatmentProcess"-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="wrap_content"-->
    <!--            android:layout_marginStart="40dp"-->
    <!--            android:layout_marginTop="16dp"-->
    <!--            android:layout_marginEnd="40dp"-->
    <!--            android:background="@drawable/button_background"-->
    <!--            android:focusable="true"-->
    <!--            android:text="TREATMENT PROCESS"-->
    <!--            app:layout_constraintEnd_toEndOf="@+id/parent"-->
    <!--            app:layout_constraintStart_toEndOf="@+id/parent"-->
    <!--            app:layout_constraintTop_toBottomOf="@+id/btnTeethDiagram" />-->


    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button_background"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/parent"
        app:layout_constraintStart_toStartOf="@+id/parent"
        app:layout_constraintTop_toBottomOf="@+id/treatmentProcess" />


</androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

